--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+2
   spotify: ^0.1.6+3
+  intl: ^0.16.0
 
 
   # The following adds the Cupertino Icons font to your application.
