--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0+2
-  spotify: ^0.1.6+3
   palette_generator: ^0.2.0
+  flutter_screenutil: ^0.6.1
 
 
   # The following adds the Cupertino Icons font to your application.
